--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <body>
 
     <h1> Welcome to the to-do list application </h1>
-    <p>hey... Hello there again <p>
+    <p> This is the index page <p>
+    <a href="http://njit.edu">NJIT HOMEPAGE</a>
   </body>
  </html>
