--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
     <h1> Welcome to the to-do list application </h1>
     <p> This is the index page <p>
     <a href="http://njit.edu">NJIT HOMEPAGE</a>
+    <ul>
+      <li> January  </li>
+      <li> February </li>
+      <li> March </li>
+      <li> April </li>
+    </ul>
   </body>
  </html>
