Added quotes with italic and bold

--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
       <li> March </li>
       <li> April </li>
     </ul>
+    <i> "Dont worry about failures, worry about the chances you miss
+    when you don't even try."
+    </i> <b> By Jack Canfield </b>
+
   </body>
  </html>
